--- a/pyq-quizzes.html
+++ b/pyq-quizzes.html
@@ -237,7 +237,8 @@
       <button class="manual-btn" data-manual="30pyq2023">3. PYQ 30% Main 2023</button>
       <button class="manual-btn" data-manual="30pyq2024">4. PYQ 30% Main 2024</button>
       <button class="manual-btn" data-manual="70pyq2023">5. PYQ 70% Main 2023</button>
-      <button class="manual-btn" data-manual="70pyq2023sup">14. PYQ 70% Sup 2023</button>
+      <button class="manual-btn" data-manual="70pyq2023sup">6. PYQ 70% Sup 2023</button>
+      <button class="manual-btn" data-manual="70pyq2024main">7. PYQ 70% Main 2024</button>
     </div>
   </div>
 </div>
