--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
       <div class="quiz-card">14. PYQ 70% Main 2023</div>
       <div class="quiz-card">15. PYQ 70% Supp 2023</div>
       <div class="quiz-card">16. PYQ 70% Main 2024</div>
+      <div class="quiz-card">17. NAIR Question Bank 2019</div>
     </div>
     <div class="card">
       <h3>Latest Questions</h3>
