--- a/dashboard.html
+++ b/dashboard.html
@@ -410,6 +410,7 @@
       <button class="manual-btn" data-manual="70pyq2023">14. PYQ 70% Main 2023</button>
       <button class="manual-btn" data-manual="70pyq2023sup">15. PYQ 70% Sup 2023</button>
       <button class="manual-btn" data-manual="70pyq2024main">16. PYQ 70% Main 2024</button>
+      <button class="manual-btn" data-manual="nair-qb-2019">17. NAIR Question Bank 2019</button>
     </div>
   </section>
 
