--- a/quiz.html
+++ b/quiz.html
@@ -113,6 +113,13 @@
       margin: 20px 0;
       text-align: center;
     }
+    #quizTitle {
+  font-size: 1.8rem;
+  font-weight: bold;
+  padding: 10px 0;
+  border-bottom: 2px solid #1976d2;
+  color: #1976d2;
+}
   </style>
 </head>
 <body>
