--- a/quiz.html
+++ b/quiz.html
@@ -35,6 +35,12 @@
       gap: 10px;
       margin-bottom: 20px;
     }
+    .logo {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
     .answer-btn {
       padding: 10px 15px;
       background: #e0ecff;
@@ -168,6 +174,7 @@
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 ">
   <div style="font-size: 1.5rem; font-weight: bold;">Quiz App</div>
+  <a href="index.html" class="logo">IR-LDCE</a>
   <nav>
     <a href="dashboard.html" style="color: white; text-decoration: none; margin-right: 20px;">Dashboard</a>
     <a href="#" onclick="logout()" style="color: white; text-decoration: none;">Logout</a>
