--- a/quiz.html
+++ b/quiz.html
@@ -114,6 +114,14 @@
       background: #4caf50;
       color: white;
     }
+    #home-btn {
+      background: #ff9800;
+      color: white;
+    }
+    #history-btn {
+      background: #4caf50;
+      color: white;
+    }
     #result {
       font-size: 1.5rem;
       margin: 20px 0;
