--- a/quiz.html
+++ b/quiz.html
@@ -426,8 +426,8 @@ function showQuestion() {
       <td style="padding: 10px; text-align: center; border: 1px solid #ccc;">${incorrectCount}</td>
     </tr>
   </table>
-        <button id="home-btn" style="margin: 10px; padding: 10px 20px;">Home</button>
-        <button id="history-btn" style="margin: 10px; padding: 10px 20px;">Attempt History</button>
+        <button id="home-btn" style="margin: 5px; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; font-size: 1rem;">Home</button>
+        <button id="history-btn" style="margin: 5px; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; font-size: 1rem;">Attempt History</button>
       `;
 
       document.getElementById('home-btn').addEventListener('click', () => {
